@@ -16,7 +16,7 @@
         <summary>Collection of tools to ripping and transcoding videos.</summary>
         <summary lang="de">Kollektion von Tools zum rippen und transkodieren von Videos.</summary>
         <description>This collection of tools operates as a GUI for ripping with dd / HandBrake und Makemkv.This script is may not allowed in some countrys.Neither the author of this script or the creators of xbmc are responsible if you break a law by ripping or transcode any dvd or bluray inside your current country.</description>
-        <description lang="de">Diese Kolleketion von Tools operieren als GUI für zum rippen mit dd dd / HandBrake und Makemkv.Dieses Skript ist möglicherweise in einigen Ländern nicht erlaubt. Die Benutzung erfolgt auf eigene Gefahr.</description>
+        <description lang="de">Diese Kolleketion von Tools operieren als GUI für zum rippen mit dd / HandBrake und Makemkv.Dieses Skript ist möglicherweise in einigen Ländern nicht erlaubt. Die Benutzung erfolgt auf eigene Gefahr.</description>
         <summary lang="fr">Collection d'outils pour ripper et transcoder les vidéos.</summary>
         <description lang="fr">Cette collection d'outils propose une IHM permettant de ripper avec un dd / HandBrake et Makemkv.Ce script peut ne pas être autorisé dans certains pays. Ni l'auteur du script ni les créateurs de xbmc ne sont responsables si vous violez la loi en rippant ou en transcodant tout dvd ou blu-ray dans votre propre pays.</description>
 </extension>
