@@ -1494,7 +1494,19 @@ class GUIMain01Class(xbmcgui.Window):
               # to be sure that the main-process of every 
               # shell-script is running ....
  
-              __jobs__ = True
+              mainprocess = OSCheckMainProcess()
+              if (mainprocess == 0): 
+                  __jobs__ = True
+              else:
+
+                  # There must be something wrong ....
+                  # The main-process is not running ...
+ 
+                  GUIInfo(1,"Ups ....shit happens on a svn-release sometimes ...") 
+                   
+                  removal = OSRemoveLock()
+                  state = OSKillProc()
+                  __jobs__ = False                 
 
           if (job_state == 0):
               __jobs__ = False
@@ -1642,10 +1654,10 @@ class GUIWorkerThread(threading.Thread):
                          exit = False
                    time.sleep(1)
                    GUIlog('[W-Thread] is active and running ...')
-                   if (__ProgressView__ == False):
-                       if (__jobs__ == True):
-                          if (__verbose__ == "true"):   
-                             GUIlog('[W-Thread] active jobe is running .....') 
+#                   if (__ProgressView__ == False):
+#                       if (__jobs__ == True):
+#                          if (__verbose__ == "true"):   
+#                             GUIlog('[W-Thread] active jobe is running .....') 
 
             if (__verbose__ == "true"):   
                 GUIlog('[W-Thread] do exit now ...')
