@@ -40,7 +40,8 @@
         <string id="32076">Standard Timeout 3: Kapitel-Bluray</string>
         <string id="32077">Standard Brenn bzw. Transcode Verzeichniss</string>  
         <string id="32078">Standard Iphone-Transcode Verzeichniss</string>  
-        <string id="32079">Standard PSP-Transcode Verzeichniss</string>    
+        <string id="32079">Standard PSP-Transcode Verzeichniss</string>
+        <string id="32080">Lösche Dateien bei Fehler</string>     
     
 
         <!--              --> 
