@@ -60,6 +60,7 @@ OUTPUT_ERROR="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/log/
 JOBFILE="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/JOB"
 JOBERROR="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/JOB.ERROR"
 OUT_TRANS="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/iphone-transcode.log"
+PWATCH="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/PWATCH"
 
 # Define the counting commands we expect inside the script
 
@@ -207,6 +208,8 @@ if [ $# -eq 5 ]; then
     ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}' >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
     PID=$(ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}') 
 
+    echo $PID > $PWATCH 
+
     echo
     echo INFO processing data pass 1 of 1
     echo
@@ -290,6 +293,8 @@ if [ $# -eq 7 ]; then
        echo $$ > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}' >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        PID=$(ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}') 
+
+       echo $PID > $PWATCH  
 
        echo
        echo INFO processing data pass 1 of 1
@@ -380,6 +385,8 @@ if [ $# -eq 7 ]; then
        ps axu | grep mencoder | grep -v grep |awk '{print $2}' >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        PID=$(ps axu | grep mencoder | grep -v grep |awk '{print $2}')
 
+       echo $PID > $PWATCH  
+
        LOOP=1
        while [ $LOOP -eq '1'  ];
        do
@@ -433,6 +440,8 @@ if [ $# -eq 7 ]; then
        echo $$ > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}' >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        PID=$(ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}') 
+
+       echo $PID > $PWATCH  
 
        echo
        echo INFO processing data pass 2 of 2
@@ -521,6 +530,8 @@ if [ $# -eq 9 ]; then
        ps axu | grep mencoder | grep -v grep |awk '{print $2}' >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        PID=$(ps axu | grep mencoder | grep -v grep |awk '{print $2}')
 
+       echo $PID > $PWATCH  
+
        LOOP=1
        while [ $LOOP -eq '1'  ];
        do
@@ -575,6 +586,8 @@ if [ $# -eq 9 ]; then
        ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}' >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-pid
        PID=$(ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}') 
 
+       echo $PID > $PWATCH 
+
        echo
        echo INFO processing data pass 2 of 2
        echo
@@ -621,9 +634,9 @@ fi
 
 rm $JOBFILE > /dev/null 2>&1
 
-
 sleep 1
 rm ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/* > /dev/null 2>&1
+rm $PWATCH > /dev/null 2>&1
 
 echo
 echo ----------------------- script rc=0 -----------------------------
